k3s/status/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: status
  namespace: status
spec:
  ingressClassName: traefik
  rules:
    - host: status.aneeshmaganti.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: status
                port:
                  number: 80
